ooyala_player/public/css/ooyala_player.css
.ooyala-player-xblock-wrapper * {
    box-sizing: border-box;
}

.ooyala-player-xblock-wrapper .hide {
    display: none;
}

.ooyala-player-xblock-wrapper .ooyalaplayer {
    position: absolute;
}

.ooyala-player-xblock-wrapper .ooyala-player-container {
    position: relative;
    width: 640px;
    min-height: 360px;
    height:auto;
}

.ooyala-player-xblock-wrapper .ooyala-overlay > div {
    position: absolute;
    top: 12px;
    margin-left:318px;
    height:auto;
    z-index:20000;
    padding:10px 10px;
    background:#FAFAFA;
    width:300px;
    border-radius:10px;
    opacity:0.4;
    font-family:"Open Sans", sans-serif;
    font-size:14px;
}

.ooyala-player-xblock-wrapper .ooyalaplayer .oo_controls .oo_playhead_progress {
    background-color:#4A4A4A !important;
}

.ooyala-player-xblock-wrapper .ooyalaplayer .oo_controls .oo_fullscreen_on {
    cursor: pointer !important;
    background-size:45px 46px !important;
    background-image: url('../images/maximize_button.png') !important;
    left: 561 !important;
}

.ooyala-player-xblock-wrapper .ooyalaplayer .oo_controls .oo_fullscreen_off {
    cursor: pointer !important;
    background-size: 45px 46px !important;
    background-image: url('../images/minimize.png') !important;
}

.ooyala-player-xblock-wrapper .ooyalaplayer .oo_controls .oo_playhead {
    cursor: pointer !important;
    background-image: url('../images/scrubber.png') !important;
    background-size: 57px 57px !important;
    background-position: center;
}

.ooyala-player-xblock-wrapper .ooyalaplayer .oo_controls .oo_play {
    cursor:pointer !important;
    background-size:45px 46px !important;
    background-image: url('../images/play.png') !important;
}

.ooyala-player-xblock-wrapper .ooyalaplayer .oo_controls .oo_pause {
    cursor: pointer !important;
    background-size: 45px 46px !important;
    background-image: url('../images/pause.png') !important;
}

.ooyala-player-xblock-wrapper .ooyalaplayer .oo_error .oo_error_image {
	position: absolute;
	width: 100%;
	height: 30%;
	top: 20%;
	background-image: url('../images/error.png') !important;
}


.ooyala-player-xblock-wrapper .ooyalaplayer .oo_error .oo_error_message .oo_error_message_text {
	font-family: "Open Sans", sans-serif;
	font-size:14px;
}

.ooyala-player-xblock-wrapper .ooyalaplayer .oo_full_controls .oo_playhead {
    cursor: pointer !important;
    height: 28px !important;
    width: 29px !important;
    margin: -4px !important;
    padding: 4px !important;
}

.ooyala-player-xblock-wrapper .ooyalaplayer .oo_controls .oo_label {
    font-family: "Open Sans", sans-serif !important;
    color: #D1D1D1 !important;
}

.ooyala-player-xblock-wrapper .ooyalaplayer .oo_full_controls .vod .oo_scrubber {
    left: 73px !important;
    right: 60px !important;
    top: 9px !important;
    bottom: 10px !important;
}

.ooyala-player-xblock-wrapper .ooyalaplayer .innerWrapper {
    z-index: 10;
}

